
3/11/18
added comments to the main method of cryptoevaluator
added the timestamp for the build logs method so it matches the cryptostatanalysis timestamp
added a special true price bought to make the outputed cumulative percent change equal to the correct change

3/12/18
added a special stats dictionary that will hold the total volume, score, and mean of each crypto for every cycle

3/23/18
fixed key error occuring when calculating % changes in crypto stat analyis
updated log system so the files are sepearted by the run of crypto trainer then class

3/25/18
overhauled automated log system so they are all under a common set of headings
fixed the error with indexes causing zero calculations
potentially fixed no cryptos picked crash error (not sure because it can still pick no crypto and not have crashed)

3/26/18
added a system to randomly choose which parameters to change

4/9/18
fixed timeHeld bug where it actually held the total amount of time that had gone by
implemented a dictionary to store input passed to crypto evaluator
crypto evaluator now reads and returns the parameters through pickle files
crypto trainer now reads and writes to pickles files
all legacy reading and writing to the parameter files and passed parameters in input stream removed from crypto trainer and evaluator
runtime, mode, pickle param path, classnum, and variation num are passed through an input stream to evaluator

4/14/18
fixed log path errors for classnum, variationnum, and runtime for solo evaluator
added percent changes and average percent change by group to the crypto stat analysis decisions list
fixed exit condition to treat the max percent increase parameter differently if it is negative or positive
fixed crypto stats. now the dictionaries face the right way (0 is the oldest data)
added a new parameter that measures how much data before the interval you want
fixed modified volume's index issue where the percent changes and volume changes were not lined up